<links activated takes you to image>

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <!-- Navbar Banner w/corp Logo -->
 
     <div class="pos-f-t">
-        <!-- <div class="collapse" id="navbarToggleExternalContent">s
+        <div class="collapse" id="navbarToggleExternalContent">s
             <div class="bg-dark p-4">
                 <h5 class="text-white h4">Collapsed content</h5>
                 <span class="text-muted">Toggleable via the navbar brand.</span>
             </div>
-        </div> -->
+        </div>
         <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#logo">
-                    <img style="max-width:250px; max-height:250px; margin-top: -75px;" src="assets/images/transparent.png" class="d-inline-block align-top"
-                        alt="Responsive image">
+                    <img style="max-width:250px; max-height:250px; margin-top: -75px;"
+                        src="assets/images/transparent.png" class="d-inline-block align-top" alt="Responsive image">
                 </a>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -43,48 +43,76 @@
     <!-- Main Image w/Text-->
 
     <div class="card bg-light text-white">
-        <img src="assets/images/IMG_1223.JPG" class="img-fluid" alt="Responsive image">
-        <button class="btn">EXPLORE NOW</button>
-        <div class="card-img-overlay">
-            <h1 class="card-title"></h1>
-            <h3 class="card-text">Reshaping the capital markets landscapde</h3>
-            <h5 class="card-text">~ the inexplicaple difference</h5>
+        <div class="row">
+            <div class="col-8">
+                <img src="assets/images/IMG_1223.JPG" class="img-fluid" alt="Responsive image">
+                <button class="btn">EXPLORE NOW</button>
+                <div class="card-img-overlay">
+                    <h1 class="card-title"></h1>
+                    <h3 class="card-text">Reshaping the capital markets landscapde</h3>
+                    <h5 class="card-text">~ the inexplicaple difference</h5>
+                </div>
+            </div>
+            <div class="col-4" id="text">
+
+                <br>
+                <h3>8 Levels Of Financial Freedom</h3>
+                <p>Forbes Apr 9, 2019, 08:00am</p>
+                <p>David Rae Contributor</p>
+                <!-- https://www.forbes.com/sites/davidrae/2019/04/09/levels-of-financial-freedom/#216d8f5a3860 -->
+                <ul class="list-group"></ul>
+                <li class="list-group-item">Level 1: Not Living Paycheck to Paycheck</li>
+                <li class="list-group-item">Level 2: Enough Money to Quit your Job (for a bit)</li>
+                <li class="list-group-item">Level 3: Enough to be Financially Happy and still Save</li>
+                <li class="list-group-item">Level 4: Freedom of Time</li>
+                <li class="list-group-item">Level 5: Enough for a Basic Retirement</li>
+                <li class="list-group-item">Level 6: Enough to Actually Retire Well</li>
+                <li class="list-group-item">Level 7: Enough for Dream Retirement</li>
+                <li class="list-group-item">Level 8: More Money Than You Could Ever Spend</li>
+                </ul>
+                <br>
+                <p>David Rae a Certified Financial Planner™ and Accredited Investment Fiduciary® helping people make
+                smarter financial decisions since 2003. Investopedia has named David one of the "100 Most
+                Influential Financial Advisors" for 2017 and 2018. </p>
+
+            </div>
         </div>
     </div>
 
     <!-- 3 cards in a row -->
     <div class="card-deck">
         <div class="card">
-          <img class="card-img-top" src="assets/images/IMG_1568.JPG" alt="Responsive image">
-          <div class="card-body">
-            <h5 class="card-title">Infrastructure</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
+            <img class="card-img-top" src="assets/images/IMG_1568.JPG" alt="Responsive image">
+            <div class="card-body">
+                <h5 class="card-title">Infrastructure</h5>
+                <p class="card-text">The Human Right to Water and Sanitation (HRWS) was recognised as a human right by the United Nations General Assembly on 28 July 2010. ... It stated: "The human right to water entitles everyone to sufficient, safe, acceptable, physically accessible and affordable water for personal and domestic uses." ~Wikipedia</p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="assets/images/IMG_2031.JPG" alt="Responsive image">
-          <div class="card-body">
-            <h5 class="card-title">Community</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
+            <img class="card-img-top" src="assets/images/IMG_2031.JPG" alt="Responsive image">
+            <div class="card-body">
+                <h5 class="card-title">Community</h5>
+                <p class="card-text">I would like a situation where all the people who work with me, the investors, the banks, the suppliers, all earn a just amount. Otherwise the annual report comes out and when people read it, they say: ‘You are thieves. ~ Brunello Cucinelli</p>
+
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="assets/images/IMG_2704.JPG" alt="Responsive image">
-          <div class="card-body">
-            <h5 class="card-title">Eco-Environmental</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
+            <img class="card-img-top" src="assets/images/IMG_2704.JPG" alt="Responsive image">
+            <div class="card-body">
+                <h5 class="card-title">Eco-Environmental</h5>
+                <p class="card-text">The green economy is defined as economy that aims at reducing environmental risks and ecological scarcities, and that aims for sustainable development without degrading the environment. It is closely related with ecological economics, but has a more politically applied focus. ~Wikipedia</p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
         </div>
-      </div>
+    </div>
 
 
     <!-- Footer -->
