<need to add social media in the footer bar>

--- a/index.html
+++ b/index.html
@@ -13,31 +13,60 @@
 
 <body>
 
-    <!-- Navbar Banner w/corp Logo -->
-
+    <!-- code for bootstrap collapse plug-in for hidden content -->
     <div class="pos-f-t">
-        <div class="collapse" id="navbarToggleExternalContent">s
-            <div class="bg-dark p-4">
-                <h5 class="text-white h4">Collapsed content</h5>
-                <span class="text-muted">Toggleable via the navbar brand.</span>
-            </div>
+        <div class="collapse" id="navbarToggleExternalContent">
+            <h5 class="text-white h4">Collapsed content</h5>
+            <h5 class="text-white h4">Overview</h5>
+            <h5 class="text-white h4">Corporate Governance</h5>
+            <h5 class="text-white h4">Overview</h5>
+            <h5 class="text-white h4">Board and Governance</h5>
+            <h5 class="text-white h4">Sustainability Reporting</h5>
+            <h5 class="text-white h4">Proxy Materials</h5>
+            <h5 class="text-white h4">Proxy Materials</h5>
+            <h5 class="text-white h4">Annual Report</h5>
+            <h5 class="text-white h4">Integrity Hotlines</h5>
+            <h5 class="text-white h4">Financials</h5>
+            <h5 class="text-white h4">Presentations</h5>
+            <h5 class="text-white h4">Creditor Information</h5>
+            <h5 class="text-white h4">Contacts</h5>
+            <span class="text-muted">Toggleable via the navbar brand.</span>
         </div>
+
+        <!-- code for button that toggles the collapse -->
         <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#logo">
-                    <img style="max-width:250px; max-height:250px; margin-top: -75px;"
-                        src="assets/images/transparent.png" class="d-inline-block align-top" alt="Responsive image">
-                </a>
-            </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!-- code for form, allow for imput, click/enter to to submit -->
+            <form class="form-inline">
+                <input class="form-control-lg" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn" id=goButton type="submit">GO</button>
+            </form>
+            <!-- corporate logo nested in navigation bar -->
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#logo">
+                    <img style="max-width:875px; max-height:875px; margin-top: -205px;"
+                        src="assets/images/transparent.png" class="d-inline-block align-top" alt="Responsive image">
+                </a>
+            </div>
         </nav>
     </div>
 
 
+
+    <!-- Navbar Banner w/corp Logo -->
+
+
+    </div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent"
+        aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    </nav>
+    </div>
 
 
     <!-- Main Image w/Text-->
@@ -71,21 +100,24 @@
                 <li class="list-group-item">Level 8: More Money Than You Could Ever Spend</li>
                 </ul>
                 <br>
-                <p>David Rae a Certified Financial Planner™ and Accredited Investment Fiduciary® helping people make
-                smarter financial decisions since 2003. Investopedia has named David one of the "100 Most
-                Influential Financial Advisors" for 2017 and 2018. </p>
+                <p> David Rae a Certified Financial Planner™ and Accredited Investment Fiduciary® helping people make
+                    smarter financial decisions since 2003. Investopedia has named David one of the "100 Most
+                    Influential Financial Advisors" for 2017 and 2018. </p>
 
             </div>
         </div>
     </div>
 
-    <!-- 3 cards in a row -->
+    <!-- 3 cards in a row, picture/text stacked -->
     <div class="card-deck">
         <div class="card">
             <img class="card-img-top" src="assets/images/IMG_1568.JPG" alt="Responsive image">
             <div class="card-body">
                 <h5 class="card-title">Infrastructure</h5>
-                <p class="card-text">The Human Right to Water and Sanitation (HRWS) was recognised as a human right by the United Nations General Assembly on 28 July 2010. ... It stated: "The human right to water entitles everyone to sufficient, safe, acceptable, physically accessible and affordable water for personal and domestic uses." ~Wikipedia</p>
+                <p class="card-text">The Human Right to Water and Sanitation (HRWS) was recognised as a human right by
+                    the United Nations General Assembly on 28 July 2010. ... It stated: "The human right to water
+                    entitles everyone to sufficient, safe, acceptable, physically accessible and affordable water for
+                    personal and domestic uses." ~Wikipedia</p>
             </div>
             <div class="card-footer">
                 <small class="text-muted">Last updated 3 mins ago</small>
@@ -95,7 +127,9 @@
             <img class="card-img-top" src="assets/images/IMG_2031.JPG" alt="Responsive image">
             <div class="card-body">
                 <h5 class="card-title">Community</h5>
-                <p class="card-text">I would like a situation where all the people who work with me, the investors, the banks, the suppliers, all earn a just amount. Otherwise the annual report comes out and when people read it, they say: ‘You are thieves. ~ Brunello Cucinelli</p>
+                <p class="card-text">I would like a situation where all the people who work with me, the investors, the
+                    banks, the suppliers, all earn a just amount. Otherwise the annual report comes out and when people
+                    read it, they say: ‘You are thieves. ~ Brunello Cucinelli</p>
 
             </div>
             <div class="card-footer">
@@ -106,7 +140,10 @@
             <img class="card-img-top" src="assets/images/IMG_2704.JPG" alt="Responsive image">
             <div class="card-body">
                 <h5 class="card-title">Eco-Environmental</h5>
-                <p class="card-text">The green economy is defined as economy that aims at reducing environmental risks and ecological scarcities, and that aims for sustainable development without degrading the environment. It is closely related with ecological economics, but has a more politically applied focus. ~Wikipedia</p>
+                <p class="card-text">The green economy is defined as economy that aims at reducing environmental risks
+                    and ecological scarcities, and that aims for sustainable development without degrading the
+                    environment. It is closely related with ecological economics, but has a more politically applied
+                    focus. ~Wikipedia</p>
             </div>
             <div class="card-footer">
                 <small class="text-muted">Last updated 3 mins ago</small>
