<having issues with svg>

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <!-- code for form, allow for imput, click/enter to to submit -->
+            <!-- code for form, allow for imput, click/enter to submit -->
             <form class="form-inline">
                 <input class="form-control-lg" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn" id=goButton type="submit">GO</button>
@@ -58,8 +58,6 @@
 
 
     <!-- Navbar Banner w/corp Logo -->
-
-
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent"
         aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,7 +65,6 @@
     </button>
     </nav>
     </div>
-
 
     <!-- Main Image w/Text-->
 
@@ -160,7 +157,22 @@
         <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            
+            <a href="#facebook" class="btn btn-primary">
+                <img src="assets/images/facebook_174848.svg" alt="Responsive image">
+            </a>
+            <a href="#twitter" class="btn btn-primary">
+                <img src="assets/images/twitter_174876.svg" alt="Responsive image">
+            </a>
+            <a href="#pintrest" class="btn btn-primary">
+                <img src="assets/images/pinteret_174863.svg" alt="Responsive image">
+            </a>
+            <a href="#payPal" class="btn btn-primary">
+                <img src="assets/images/paypal_174861.svg" alt="Responsive image">
+            </a> 
+            <a href="#whatsapp" class="btn btn-primary">
+                <img src="assets/images/whatsapp_174879.svg" alt="Responsive image">
+            </a>
         </div>
         <div class="card-footer text-muted">
         </div>
