--- a/index.html
+++ b/index.html
@@ -152,30 +152,32 @@
     <!-- Footer -->
     <div class="card text-center">
         <div class="card-footer">
-            Follow us on
+            Follow us & Contact us at:
         </div>
         <div class="card-body">
             <h5 class="card-title"></h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
             
-            <a href="#facebook" class="btn btn-primary">
-                <img src="assets/images/facebook_174848.svg" alt="Responsive image">
-            </a>
-            <a href="#twitter" class="btn btn-primary">
-                <img src="assets/images/twitter_174876.svg" alt="Responsive image">
-            </a>
-            <a href="#pintrest" class="btn btn-primary">
-                <img src="assets/images/pinteret_174863.svg" alt="Responsive image">
-            </a>
-            <a href="#payPal" class="btn btn-primary">
-                <img src="assets/images/paypal_174861.svg" alt="Responsive image">
-            </a> 
-            <a href="#whatsapp" class="btn btn-primary">
-                <img src="assets/images/whatsapp_174879.svg" alt="Responsive image">
-            </a>
+            <!-- <a  class="imageheart" href="#test">
+                <img style="max-width:900px; max-height:900px; margin-top: -30px;" src="assets/images/IMG_2031.JPG" id="heartImage" alt="Responsive image">
+             -->
+                <a class="facebook" href="#facebook">
+                    <img style="max-width:60px; max-height:60px; margin-top: 0px; margin-right: 250px; margin-left: 200px;" src="assets/images/facebook_174848.svg" alt="Responsive image">
+                </a>
+                <a class="twitter" href="#twitter">
+                    <img style="max-width:60px; max-height:60px; margin-top: 0px;margin-right: 250px;" src="assets/images/twitter_174876.svg" alt="Responsive image">
+                </a>
+                <a class="pintrest" href="#pintrest">
+                    <img style="max-width:60px; max-height:60px; margin-top: 0px;margin-right: 250px" src="assets/images/pinteret_174863.svg" alt="Responsive image">
+                </a>
+                <a class="whatsapp" href="#whatsapp">
+                    <img style="max-width:60px; max-height:60px; margin-top: 0px;margin-right: 250px" src="assets/images/whatsapp_174879.svg" alt="Responsive image">
+                </a>
+                <a class="payPal" href="#payPal">
+                        <img style="max-width:60px; max-height:60px; margin-top: 0px;margin-right: 250px" src="assets/images/paypal_174861.svg" alt="Responsive image">
+                </a>
         </div>
-        <div class="card-footer text-muted">
-        </div>
+       
     </div>
 
     <!-- Jquery & Popper for Bootstrap -->
